--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <h2>Work experiences</h2>
 
       <div class="experiences-row">
-        <div class="cell clearfix">06/2013</div>
+        <div class="cell clearfix">06/2013 - 03/2014</div>
         <div class="cell clearfix">
           <h3>Mobile Developer for Teamdev S.r.l</h3>
           <div class="place">Perugia Area, Italy. Information Technology and Services</div>
