Adding new work experience

--- a/index.html
+++ b/index.html
@@ -127,6 +127,16 @@
       <h2>Work experiences</h2>
 
       <div class="experiences-row">
+        <div class="cell clearfix">04/2014</div>
+        <div class="cell clearfix">
+          <h3>iOS Developer for DXI Limited</h3>
+          <div class="place">London, United Kingdom. Software development and Telecommunications</div>
+          <div class="description"></div>
+          <div class="image"><img src="companies/dxi_logo.jpg" alt="DXI Limited"></div>
+        </div>
+      </div><!-- //experiences-row -->
+
+      <div class="experiences-row">
         <div class="cell clearfix">06/2013 - 03/2014</div>
         <div class="cell clearfix">
           <h3>Mobile Developer for Teamdev S.r.l</h3>
