--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
     <h2>Who I am</h2>
 
     <div class="intro">
-      <p>I'm a 25 years old developer specialized in mobile applications.</p>
+      <p>I'm a passionate developer specialized in mobile applications.</p>
       <p>I entered the world of programming by studying Java and Android and in the meantime I increased my knowledge with C#, Objective-C and iOS development.<br> Moreover I studied HTML5, CSS and JavaScript basics.</p>
-
-      <p>Until now I developed few mobile applications for Teamdev srl, two of them are already available on Android and iOS marketplaces. The other ones will be soon.<br>
-      I am also following some personal projects: you can find one <a href="https://github.com/nicky1525/UniApp">here</a>.</p>
-      <p>Now I'm looking for new challenges in order to learn as much as I can of this fascinating field.</p>
+<!-- 
+      <p>I recently developed a brand new VoIP iOS app for DXI that will be on the Appstore from November, and a few mobile applications for Teamdev srl, two of them are available on Android and iOS marketplaces. The other ones will be soon.<br>
+      I am also following some personal projects: you can find one <a href="https://github.com/nicky1525/UniApp">here</a>.</p> -->
     </div>
 
     <h2>Skills</h2>
@@ -63,9 +62,10 @@
         <div class="cell">
           <h3>Softwares and Operating Systems</h3>
           <ul>
-            <li>Excellent knowledge of Microsoft Office</li>
-            <li>Professional knowledge of Windows XP/Vista/7/8</li>
-            <li>Skilled in Mac OS X (10.8) and Linux (Debian)</li>
+            <li>Adobe Photoshop</li>
+            <li>Windows XP/Vista/7/8</li>
+            <li>Mac OS X</li>
+            <li>Linux (Debian)</li>
           </ul>          
         </div>
 
@@ -78,6 +78,7 @@
           <ul>
             <li>Java</li>
             <li>Objective-C</li>
+            <li>Swift</li>
             <li>C#</li>
             <li>SQL</li>
           </ul>
@@ -130,8 +131,10 @@
         <div class="cell clearfix">04/2014</div>
         <div class="cell clearfix">
           <h3>iOS Developer for DXI Limited</h3>
-          <div class="place">London, United Kingdom. Software development and Telecommunications</div>
-          <div class="description"></div>
+          <div class="place">London, UK. Software development and Telecommunications</div>
+          <div class="description">I developed a native iOS app to be used from contact centres for making, receiving, registering calls and managing customers' details.
+          It consumes internal REST APIs. The core of the app is the VoIP library that opens a SIP channel for the user in order to make and receive calls. This app will be available on the appstore on November 2014. <!-- I am now developing a new app to let the user (contact centre agent) to customise his own "Dashboard" by adding widgets, in order to better organise his job and check his performances. -->
+         </div>
           <div class="image"><img src="companies/dxi_logo.jpg" alt="DXI Limited"></div>
         </div>
       </div><!-- //experiences-row -->
@@ -141,7 +144,7 @@
         <div class="cell clearfix">
           <h3>Mobile Developer for Teamdev S.r.l</h3>
           <div class="place">Perugia Area, Italy. Information Technology and Services</div>
-          <div class="description">I developed two web based applications already available for Android and iOS mobile devices on their respective marketplaces.</div>
+          <div class="description">I developed two web based applications already available for Android and iOS mobile devices on their respective marketplaces. I also developed a GIS iPad app to save and synchronise online and offline data on a Geodatabase using ESRI's Libraries.</div>
           <div class="image"><img src="companies/teamdev.png" alt="TeamDEV"></div>
         </div>
       </div><!-- //experiences-row -->
