New CSS for pdf

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     <address>
       E-mail: <a href="mailto:nicole@delafeld.it">nicole@delafeld.it</a><br>
-      Website:  <a href="http://delafeld.it">delafeld.it</a>
+      Website:  <a href="http://delafeld.it">delafeld.it</a><br>
+      
+
 
       <div class="icons">
         <a href="https://github.com/nicky1525"><img src="github-16x16.png" alt="GitHub"></a>
