--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
   <div class="wrapper">
-    <img src="Immagine.jpg" class="photo">
+    <img src="Nicole.JPEG" class="photo">
     <h1>Nicole De La Feld</h1>
 
     <address>
-      E-mail: <a href="mailto:nicole@delafeld.it">nicole@delafeld.it</a><br>
+<!--       E-mail: <a href="mailto:nicole@delafeld.it">nicole@delafeld.it</a><br> -->
+      E-mail: <a href="mailto:nic@programmer.net">nic@programmer.net</a><br>
       Website:  <a href="http://delafeld.it">delafeld.it</a><br>
       
 
@@ -62,7 +63,7 @@
         </div>
 
         <div class="cell">
-          <h3>Softwares and Operating Systems</h3>
+          <h3>Software and Operating Systems</h3>
           <ul>
             <li>Adobe Photoshop</li>
             <li>Windows XP/Vista/7/8</li>
