--- a/index.html
+++ b/index.html
@@ -131,12 +131,11 @@
       <h2>Work experiences</h2>
 
       <div class="experiences-row">
-        <div class="cell clearfix">04/2014</div>
+        <div class="cell clearfix">04/2014 - 06/2015</div>
         <div class="cell clearfix">
           <h3>iOS Developer for DXI Limited</h3>
           <div class="place">London, UK. Software development and Telecommunications</div>
-          <div class="description">I developed a native iOS app to be used from contact centres for making, receiving, registering calls and managing customers' details.
-          It consumes internal REST APIs. The core of the app is the VoIP library that opens a SIP channel for the user in order to make and receive calls. This app will be available on the appstore on November 2014. <!-- I am now developing a new app to let the user (contact centre agent) to customise his own "Dashboard" by adding widgets, in order to better organise his job and check his performances. -->
+          <div class="description">Developed two native iOS apps to be used by contact centres for making, receiving, registering calls and managing customers' details. The core of the former, now available on the Apple store, is the VoIP library that opens a SIP channel for the user in order to make and receive calls.<br>The latter is a supervisor app to customize the Dashboard by adding widgets, access statistics, manage team performances and instant messaging.
          </div>
           <div class="image"><img src="companies/dxi_logo.jpg" alt="DXI Limited"></div>
         </div>
@@ -147,7 +146,7 @@
         <div class="cell clearfix">
           <h3>Mobile Developer for Teamdev S.r.l</h3>
           <div class="place">Perugia Area, Italy. Information Technology and Services</div>
-          <div class="description">I developed two web based applications already available for Android and iOS mobile devices on their respective marketplaces. I also developed a GIS iPad app to save and synchronise online and offline data on a Geodatabase using ESRI's Libraries.</div>
+          <div class="description">Developed two web based applications already available for Android and iOS mobile devices on their respective marketplaces. I also developed a GIS iPad app to save and synchronise online and offline data on a Geodatabase using ESRI's Libraries.</div>
           <div class="image"><img src="companies/teamdev.png" alt="TeamDEV"></div>
         </div>
       </div><!-- //experiences-row -->
