--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
           <span class="unicode-icon">&#x2709;</span> <a href="mailto:nic@programmer.net">nic@programmer.net</a>
         </li>
         <li>
-          <span class="unicode-icon">&#x2706;</span> <a href="tel:TUO_TELEFONO_QUI">TUO_TELEFONO_QUI</a>
+          <span class="unicode-icon">&#x2706;</span> <a href=""></a>
         </li>
         <li>
-          <span class="unicode-icon unicode-icon-web">&#x1f310;</span> <a href="http://www.delafeld.it">www.delafeld.it</a><br>
+          <span class="unicode-icon unicode-icon-web">&#x279a;</span> <a href="http://www.delafeld.it">www.delafeld.it</a><br>
         </li>
       </ul>
 
@@ -182,7 +182,7 @@
   <div class="wrapper">
 
     <div class="experiences clearfix">
-      <h2><span class="unicode-icon">&#x1f4bc;</span> Work experiences</h2>
+      <h2><span class="unicode-icon">&#x270d;</span> Work experiences</h2>
 		<div class="experiences-row">
         <div class="cell clearfix">06/2015</div>
         <div class="cell clearfix">
